# Any-ref-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
any_ref/: Cargo.toml
any_ref/examples/: split_at_middle.rs
any_ref/src/: builder.rs  lib.rs  self_deref.rs  type_substitute.rs  type_subtitute.rs
any_ref_macro/: Cargo.toml  README.md
any_ref_macro/src/: lib.rs
doc/: crates.js  search-index.js  settings.html  source-files.js
doc/any_ref/: all.html  fn.new_any_ref.html  index.html  macro.make_any_ref.html  sidebar-items.js  struct.AnyRef.html
doc/any_ref/type_substitute/: index.html  struct.Reference.html  struct.ReferenceMut.html  trait.LifetimeDowncast.html  trait.ReturnType.html
doc/any_ref/type_subtitute/: index.html  sidebar-items.js  struct.Reference.html  struct.ReferenceMut.html  trait.LifetimeDowncast.html  trait.ReturnType.html
doc/any_ref_macro/: all.html  index.html  macro.make_any_ref!.html  macro.make_any_ref.html  sidebar-items.js
doc/src/any_ref/: lib.rs.html  type_substitute.rs.html  type_subtitute.rs.html
doc/src/any_ref_macro/: lib.rs.html
doc/src/proc_macro2/: detection.rs.html  fallback.rs.html  lib.rs.html  marker.rs.html  parse.rs.html  wrapper.rs.html
doc/src/quote/: ext.rs.html  format.rs.html  ident_fragment.rs.html  lib.rs.html  runtime.rs.html  spanned.rs.html  to_tokens.rs.html
doc/src/stable_deref_trait/: lib.rs.html
doc/src/syn/: attr.rs.html  await.rs.html  bigint.rs.html  buffer.rs.html  custom_keyword.rs.html  custom_punctuation.rs.html  data.rs.html  (+29 more)
doc/syn/: all.html  enum.AttrStyle.html  enum.BinOp.html  enum.Data.html  enum.Expr.html  enum.Fields.html  enum.GenericArgument.html  enum.GenericParam.html  enum.Lit.html  enum.MacroDelimiter.html  enum.Member.html  enum.Meta.html  enum.NestedMeta.html  enum.PathArguments.html  enum.ReturnType.html  enum.TraitBoundModifier.html  enum.Type.html  enum.TypeParamBound.html  enum.UnOp.html  enum.Visibility.html  enum.WherePredicate.html  index.html  macro.parse_quote.html  struct.Abi.html  struct.AngleBracketedGenericArguments.html  struct.Attribute.html  struct.BareFnArg.html  struct.Binding.html  struct.BoundLifetimes.html  struct.ConstParam.html  struct.Constraint.html  struct.DataEnum.html  struct.DataStruct.html  struct.DataUnion.html  struct.DeriveInput.html  struct.ExprArray.html  struct.ExprAssign.html  struct.ExprAssignOp.html  struct.ExprAsync.html  struct.ExprAwait.html  (+84 more)
(+137 files in other folders)
