[package]
authors = ["FancyFlame <fancyflame@163.com>"]
description = "Creating a bundle that can carry an owner and a struct borrows it"
documentation = "https://docs.rs/any_ref"
edition = "2021"
keywords = ["reference", "macro"]
license = "MIT"
name = "any_ref"
readme = "../README.md"
repository = "https://github.com/Fancyflame/Any-ref-rs"
version = "0.1.4"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
any_ref_macro = {path = "../any_ref_macro", version = "0"}
stable_deref_trait = "1"
