[package]
authors = ["FancyFlame <fancyflame@163.com>"]
description = "To capture and move things that are NOT 'static with memory safety."
documentation = "https://docs.rs/any_ref"
edition = "2021"
keywords = ["self-reference", "reference", "macro"]
license = "MIT"
name = "any_ref"
readme = "../README.md"
repository = "https://github.com/Fancyflame/Any-ref-rs"
version = "0.2.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
any_ref_macro = {path = "../any_ref_macro", version = "1.0"}
stable_deref_trait = "1"