[package]
authors = ["FancyFlame <fancyflame@163.com>"]
description = "To capture and move things that are NOT 'static with memory safety."
documentation = "https://docs.rs/any_ref"
edition = "2021"
keywords = ["self-reference", "reference", "macro"]
license = "MIT"
name = "any_ref_macro"
readme = "README.md"
repository = "https://github.com/Fancyflame/Any-ref-rs"
version = "1.0.0"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = "1"
